--- a/styles/semantic.css
+++ b/styles/semantic.css
@@ -62,3 +62,19 @@
   background-image: linear-gradient(180deg, rgb(var(--color-card)), rgb(var(--color-lightBg)) 50%, rgb(var(--color-card)));
   color: rgb(var(--color-foreground));
 }
+
+/* === Exam room surfaces === */
+.bg-exam-room {
+  background-color: rgb(var(--color-surfaceAlt));
+  color: rgb(var(--color-foreground));
+}
+
+.bg-surface-elevated {
+  background-color: rgb(var(--color-card));
+  color: rgb(var(--color-foreground));
+}
+
+.bg-surface-subtle {
+  background-color: rgb(var(--color-lightBg));
+  color: rgb(var(--color-foreground));
+}
